add in bib from student selections

--- a/HB/HB 3116-Ecclesiastes.tex
+++ b/HB/HB 3116-Ecclesiastes.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.0]{HB 3116}
+\coursecode[3.0.1]{HB 3116}
 \coursetitle[Hebrew Bible]{Ecclesiastes}
 
 % Taught as BSTH 4403 at Tyndale in:
@@ -75,7 +75,7 @@ The following texts are required. Students are encouraged to obtain their own ha
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{BS 1747–75}% use the longest item in the bibliography
+\begin{thebibliography}{Qohelet}% use the longest item in the bibliography
 
 	\bibitem[Qohelet]{Qohelet} Debra Band and Menachem Fisch.
     \emph{Qohelet: Searching for a Life Worth Living}.
@@ -83,10 +83,10 @@ The following texts are required. Students are encouraged to obtain their own ha
 %	ISBN 978-1481318730.
 
 	\bibitem[TBD]{TBD} Select an additional commentary on Ecclesiates.
-	You may find one upstairs in the library stacks (try BS 1747–1475),
-	in a commentary kept in the reference section, or indeed somewhere
-	else. Nominate your selection at the start of the second class. Be
-	prepared to change commentaries if necessary.
+	You may find one in the library stacks (try BS 1473–1475), in a
+	commentary kept in the reference section, or indeed somewhere else.
+	See \autoref{bib}. Nominate your selection at the start of the
+	second class. Be prepared to change commentaries if necessary.
 
 \end{thebibliography}
 \endgroup
@@ -296,13 +296,91 @@ The breakdown for the semester's total work is shown in
 \section{Bibliography}
 \label{bib}
 
-Articles and book chapters from the vast literature on Ecclesiastes in
-reception, and in the context of the Writings and wisdom literature
-(so-called), may be recommended as the semester progresses. Students are
-encouraged to pursue secondary literature on their own as well. To start
-your research, refer to the bibliographies in the books listed in
+Some traditional commentaries on Ecclesiastes available in English:
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{99}
+
+\bibitem{Bonaventure} Bonaventure. \emph{Commentary on Ecclesiastes}. Edited and translated by Robert J. Karris, O.F.M., and Campion Murray, O.F.M. Works of Saint Bonaventure 7. St. Bonaventure, NY: Franciscan Institute, 2005.
+
+\bibitem{Chysostom} Chysostom, John. \emph{Commentaries on the Sages, Vol 2: Commentary on Proverbs, Commentary on Ecclesiastes}. Translated by Robert C. Hill. Brookline: Holy Cross Orthodox, 2006.
+
+\bibitem{Gregory} Gregory of Nyssa. \emph{Homilies on Ecclesiastes}. Translated by Richard McCambly. Edited by John Litteral. Ancient Bible Commentaries in English. Kentucky: Litteral’s Christian Library Publications, 2014.
+
+\bibitem{Jerome} Jerome. \emph{Commentary on Ecclesiastes}. Edited by Richard J. Goodrich and David Miller. Ancient Christian Writers 66. New York: Newman, 2012.
+
+\bibitem{Luther} Luther, Martin. “Notes on Ecclesiastes.” Translated by Jaroslav Pelikan. Pages 1-187 in vol. 15 of \emph{Luther’s Works}. Edited by Jaroslav Pelikan. Saint Louis: Concordia Publishing, 1955.
+
+\bibitem{Rashi} Rashi. \emph{Commentary on Ecclesiastes}. In \emph{The Metsudah Five Megillot}. Translated by Avrohom Davis and Yaakov Y.H. Pupko. Lakewood, NJ: Gross Bros., 2001. Accessed from sefaria.org.
+
+\end{thebibliography}
+\endgroup
+
+\noindent Some more recent commentaries on Ecclesiastes available in English:
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{99}
+\makeatletter%https://tex.stackexchange.com/a/114434
+\addtocounter{\@listctr}{6}
+\makeatother
+
+\bibitem{Bartholomew} Bartholomew, Craig G. \emph{Ecclesiastes}. Grand Rapids: Baker Academic, 2009.
+
+\bibitem{Barton} Barton, George A. \emph{A Critical and Exegetical Commentary on the Book of Ecclesiastes}. Edinburgh: T\&T Clark, 1908.
+
+\bibitem{Bennet} Bennet, Stephen J. \emph{Ecclesiastes / Lamentations: A Commentary in the Wesleyan Tradition}. New Beacon Bible Commentaries. Kansas City: Beacon, 2010
+
+\bibitem{Brown} Brown, William P. \emph{Ecclesiastes}. Interpretation: A Bible Commentary for Teaching and Preaching. Louisville: Westminster John Knox, 2000.
+
+\bibitem{Crenshaw} Crenshaw, James L. \emph{Ecclesiastes}. Old Testament Library. Philadelphia: Westminster, 1987.
+
+\bibitem{Davis} Davis, Ellen F. \emph{Proverbs, Ecclesiastes, and the Song of Songs}. Westminster Bible Companion. Louisville: Westminster John Knox, 2000.
+
+\bibitem{Delitzsch} Delitzsch, Franz. \emph{Commentary on the Song of Songs and Ecclesiastes}. Translated by M. G. Easton. Clark’s Foreign Theological Library, 4th series, 54. Edinburgh: T\&T Clark, 1877.
+
+\bibitem{Eichhorn} Eichhorn, David Max. \emph{Musings of the Old Professor: The Meaning of Koheles}. New York: Jonathan David, 1963.
+
+\bibitem{Enns} Enns, Peter. \emph{Ecclesiastes}. Two Horizons Commentary. Grand Rapids: Eerdmans, 2011.
+
+\bibitem{Fox} Fox, Michael V. \emph{Ecclesiastes: The Traditional Hebrew Text with the New JPS Translation}. JPS Bible Commentary. Philadelphia: Jewish Publication Society, 2004.
+
+\bibitem{Fredericks} Fredericks, Daniel C., and Daniel C. Estes. “Ecclesiastes and he Song of Songs.” Pages 17–263 in \emph{Apollos Old Testament Commentary} 16. Edited by David W. Baker and Gordon J. Wenham. Downers Grove: InterVarsity, 2010.
+
+\bibitem{Ginsburg} Ginsburg, Christian D. \emph{The Song of Songs and Coheleth}. Library of Biblical Studies. New York: KTAV, 1970 [repr. of 1861 original].
+
+\bibitem{Gordis} Gordis, Robert. \emph{Koheleth—The Man and His World: A Study of Ecclesiastes}. 3d ed. New York: Schocken, 1968.
+
+\bibitem{Krüger} Krüger, Thomas. \emph{Qoheleth: A Commentary}. Translated by O.\,C. Dean, Jr. Hermeneia: A Critical and Historical Commentary on the Bible. Minneapolis: Fortress, 2004.
+
+\bibitem{Lohfink} Lohfink, Norbert. \emph{Qoheleth: A Continental Commentary}. Translated by Sean McEvenue. Minneapolis: Fortress, 2003.
+
+\bibitem{Longman} Longman, Tremper V., III. \emph{The Book of Ecclesiastes}. New International Commentary on the Old Testament. Grand Rapids: Eerdmans, 1998.
+
+\bibitem{Murphy} Murphy, Roland E. \emph{Ecclesiastes}. World Biblical Commentary 23A. Grand Rapids: Michigan, 1992.
+
+\bibitem{Ogden} Ogden, Graham S. \emph{Qoheleth}. Sheffield: JSOT, 1987.
+
+\bibitem{Schoors} Schoors, Antoon. \emph{Ecclesiastes}. Historical Commentary on the Old Testament. Leuven, Belgium: Peeters, 2013.
+
+\bibitem{Seow} Seow, Choon-Leong. \emph{Ecclesiastes: A New Translation with Introduction and Commentary}. Anchor Bible 18C. New York: Doubleday, 1997.
+
+\bibitem{Towner} Towner, Sibley W. “The Book of Ecclesiastes.” In \emph{The New Interpreter’s Bible}. Vol. 5. Edited by Leander E. Keck and Richard J. Clifford, 265–360. Nashville: Abingdon, 1997.
+
+\bibitem{Weeks} Weeks, Stuart. \emph{A Critical and Exegetical Commentary on Ecclesiastes}. International Critical Commentary. 2 vols. London: T\&T Clark, 2020–2022.
+
+\end{thebibliography}
+\endgroup
+
+
+
+Articles and book chapters from the vast literature on Ecclesiastes may
+be recommended as the semester progresses. Students are encouraged to
+pursue secondary literature on their own as well. To start your
+research, refer to the bibliographies in the books listed in
 \autoref{supplementary}, above, search the library catalogue, and
-consult relevant databases including:
+consult relevant databases such as:
 
 \begin{itemize}
 \item \href{https://www.oxfordbibliographies.com/display/document/obo-9780195393361/obo-9780195393361-0015.xml#obo-9780195393361-0015-div1-0005}{Oxford Bibliographies Online: Biblical Studies} -- s.v. “Ecclesiastes/Qohelet,” by Timothy J. Sandoval and Marcus Hayes;
