add -UG to version number

--- a/BF/BF1001-Driver2024.tex
+++ b/BF/BF1001-Driver2024.tex
@@ -13,7 +13,7 @@
 
 %\onlinetrue % \Int{true}{false}
 %\UGtrue % \UG{true}{false} terms for undergraduate students
-\coursecode[4.1]{BF 1001\UG{-UG}{}}
+\coursecode[4.1\UG{-UG}{}]{BF 1001\UG{-UG}{}}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
