trim readings, add DTS 2000 v 2.0

--- a/BF/DTS2000-Driver2024.tex
+++ b/BF/DTS2000-Driver2024.tex
@@ -11,40 +11,14 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-%\onlinetrue % \Int{true}{false}
+\onlinetrue % \Int{true}{false}
 %\UGtrue % \UG{true}{false} terms for undergraduate students
-\coursecode[4.1\UG{-UG}{}]{BF 1001\UG{-UG}{}}
-\coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
+\coursecode[2.0]{DTS 2000}
+\coursetitle[Diploma in Theological Studies]{Introduction to the Old Testament}
 
-% Taught as RLGS 1013 in:
-%   - Fall 2008
-%   - Winter 2009
-%   - Fall 2009
-%   - Winter 2010
-%   - Fall 2010
-%   - Winter 2011 (Fall 2011 was covered by Joel Lohr in a course release)
-%   - Winter 2012
-%   - Fall 2012
-%   - Winter 2013
-% Taught as BSTH 1013 in:
-%   - Fall 2013
-%   - Winter 2014
-%   - Fall 2014
-%   - Winter 2015
-%   - Fall 2015
-%   - Winter 2016
-% Taught as BF 1001 in:
-%   - Fall 2016
-%   - Fall 2017
-%   - Fall 2017(Int - online section run parallel to campus course)
-%   - Fall 2018
-%   - Winter 2020(Int) - Nate Wall helped as TA
-%   - Fall 2020 - not scheduled Int, but driven online by Covid-19
-%   - Fall 2021(Int)
-%   - Fall 2022(Int) - run in parallel as DTS 2000: Intro to the Old Testament
-%   - Fall 2023 - Version 4.0/-UG; back to campus (only); only text: NJPS Study Bible
-%   - Fall 2024 - Version 4.1/-UG; hybrid; added textbook: Davis 2019
-
+% Taught in parallel with BF 1001 in:
+%   - Fall 2022 - Taken over in late Aug after Hugh Farquhar dropped
+%   - Fall 2024 - Redeveloped as 1st iteration at request of Dean SMG
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
@@ -52,51 +26,48 @@
 \officehours{Mondays, 1:00--3:00 \PM}
 
 \semester{Fall 2024}
-\meets{Mondays}% \meets{on}{at}{in} - on could be: \Int{Mondays}{Thursdays}
-      {10:00 \AM--12:30 \PM}% if online, it prints "From 9:00 AM"
-      {Flahiff Room}% if online, it prints "Brightspace" with link
+\meets{\Int{Mondays}{Thursdays}}% \meets{on}{at}{in}
+      {1:00--3:30 \PM}% if online, it prints "From 9:00 AM"
+      {Classroom 3}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
-\cdescription[none. The course is required for 3000-level courses in HB]{% copy from the current Academic Calendar; [] for prereqs
-	The First Testament of Christian Scripture is a fundamental part of
-	Christian tradition and durable rule of faith and practice. Students in
-	this course will be introduced to historical and literary data important
-	for understanding the origins of the Hebrew Bible/Old Testament and its
-	subsequent function as scripture in a variety of contexts. The outlook
-	will be broadly ecumenical, with case studies that exemplify Jewish and
-	Christian interpretation.
-
-	The broad sweep of biblical tradition will be presented through a survey
-	of representative books from the Law, the Prophets, and the Writings. To
-	help foster an ecumenical outlook, primary readings from the Bible will
-	be supplemented by illustrative commentary from various biblical
-	interpreters. Students will develop their exegetical skills by studying
-	these examples, and so learn to appreciate the diverse canonical,
-	cultural, hermeneutical, historical, literary, and theological elements
-	involved in the art of biblical interpretation.
+\cdescription[none. This diploma program is a two-year program intended for anyone who wants an introduction
+to biblical and theological studies. To be admitted to this program, you must have a high school diploma or its equivalent. Some post-secondary (university or college) education is desirable but not required]{% copy from the current Academic Calendar; [] for prereqs
+	\emph{From the Academic Calendar}: DTS 2000 -- Introduction to the First
+	Testament/Hebrew Scriptures. This unit uses critical methods of
+	biblical study to familiarize you with the Pentateuch and the
+	Prophetic Literature of the Hebrew Scriptures (Old Testament).
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-	By the end of the course students should be able to:
-		name major Old Testament people and events;
-		locate a few important biblical sites on a map;
-		give key dates for Israel's history and summarize the succession of superpowers in the ancient Near Eastern political theatre from Egypt to Greece;
-		recognize and cite examples of most genres of biblical literature;
-		defend a decision to pronounce or circumlocute the Divine Name;
-		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
-		report on parallel and divergent material across the Law and the Prophets;
-		classify and begin to evaluate a variety of ancient and modern approaches to the Bible.
+	The First Testament of Christian Scripture is a fundamental part of
+	Christian tradition and durable rule of faith and practice. Students
+	in this course will be introduced to historical and literary data
+	important for understanding the origins of the Hebrew Bible/Old
+	Testament and its subsequent function as scripture in a variety of
+	contexts. The outlook will be broadly ecumenical, with case studies
+	that exemplify Jewish and Christian interpretation.
 
-	Students should also be able to identify settings in which the
-	Scriptures of Israel are read (notably the synagogue, church, and
-	academy), employ terminology appropriate to these communities, recognize
-	where their own biographies place them in relation to the Hebrew
-	Bible/Old Testament and its uses, and monitor and test their individual
-	attitudes and assumptions. They should be able to extend their awareness
-	of the Bible's contemporary readers to the Bible's long history of
-	reception. Finally, students should begin to infer what Jesus meant in
-	speaking of “the law of Moses, the prophets, and the psalms” (Luke
-	24:44), and so learn to hear claims about New Testament fulfilment of
-	scripture in light of the unique voice that the Old Testament retains
-	along side of the New in Christian Scripture.
+	The broad sweep of biblical tradition will be presented through a
+	survey of representative books from the Law, the Prophets, and the
+	Writings. To help foster an ecumenical outlook, primary readings
+	from the Bible will be supplemented by illustrative commentary from
+	various biblical interpreters. Students will develop an appreciation
+	for the diverse canonical, cultural, hermeneutical, historical,
+	literary, and theological elements involved in the art of biblical
+	interpretation.
+
+	By the end of the course students should be able to identify
+	settings in which the Scriptures of Israel are read (notably the
+	synagogue, church, and academy), employ terminology appropriate to
+	these communities, recognize where their own biographies place them
+	in relation to the Hebrew Bible/Old Testament and its uses, and
+	monitor and test their individual attitudes and assumptions. They
+	should be able to extend their awareness of the Bible's contemporary
+	readers to the Bible's long history of reception. Finally, students
+	should begin to infer what Jesus meant in speaking of “the law of
+	Moses, the prophets, and the psalms” (Luke 24:44), and so learn to
+	hear claims about New Testament fulfilment of scripture in light of
+	the unique voice that the Old Testament retains along side of the
+	New in Christian Scripture.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -133,22 +104,6 @@ translation of the full Christian Bible, see Michael D. Coogan, ed.,
 the Apocrypha}, 5th ed. (Oxford: Oxford University Press, 2018).
 % ISBN 978-0190276072.
 
-\UG{}{%
-For graduate students, the following \textbf{secondary text} is also required.
-
-\begingroup
-\renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{NJPS}% use the longest item in the bibliography
-
-	\bibitem[Davis]{ed19} Davis, Ellen F.
-	\emph{Opening Israel's Scriptures}.
-	New York: Oxford University Press, 2019.
-	An AST Library e-book (single user license) is \href{https://doi.org/10.1093/oso/9780190260545.001.0001}{available online}.
-
-\end{thebibliography}
-\endgroup%
-}
-
 \section{Supplementary Texts}
 \label{supplementary}
 
@@ -157,12 +112,11 @@ either placed on reserve or made available through the course website.
 Please give this material good effort and attention. Some of this
 material is listed in the bibliography below, in \autoref{bib}.
 
-\UG{%
-The following \textbf{secondary text} is recommended but, for undergraduates, not required.
+The following \textbf{secondary text} is highly recommended but not required.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
+\begin{thebibliography}{Davis}% use the longest item in the bibliography
 
 	\bibitem[Davis]{ed19} Davis, Ellen F.
 	\emph{Opening Israel's Scriptures}.
@@ -170,10 +124,9 @@ The following \textbf{secondary text} is recommended but, for undergraduates, no
 	An AST Library e-book (single user license) is \href{https://doi.org/10.1093/oso/9780190260545.001.0001}{available online}.
 
 \end{thebibliography}
-\endgroup%
-}{}
+\endgroup
 
-The professor especially recommends two titles as profound but
+Also, the professor especially recommends two titles as profound but
 accessible, pocket-sized exemplars of Jewish and Christian interpretive
 traditions. Both titles will be referenced in the course. They repay
 careful reading and are worth adding to your personal libraries.
@@ -195,29 +148,6 @@ careful reading and are worth adding to your personal libraries.
 \end{thebibliography}
 \endgroup
 
-Also, the following basic works are worth consulting and even owning.
-\cite{rlgs} in particular contains sound advice on core skills like
-reading religious texts, writing essays and reviews, revising essays,
-making oral presentations, and learning languages.
-
-\begingroup
-\renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
-
-	\bibitem[Making]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
-	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
-	3rd ed. Toronto: Oxford University Press, 2019. AST Library: Ref BL 41.N67 2019.
-
-	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
-	\emph{The SBL Handbook of Style}.
-	2nd ed. Atlanta: SBL Press, 2014.
-	Designed to augment \href{https://proxy.openathens.net/login?qurl=https%3A%2F%2Fwww.chicagomanualofstyle.org%2Fbook%2Fed17%2Ffrontmatter%2Ftoc.html}{\emph{Chicago Style}}
-	(the standard at AST), there is also a free
-	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}. AST Library: Ref PN 147.S26 2014.
-
-\end{thebibliography}
-\endgroup
-
 
 \section{Course Outline}
 \label{outline}
@@ -231,7 +161,7 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary reading}&\textbf{Focal texts}&\textbf{Secondary}&\textbf{Due}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary reading}&\textbf{Focal texts}&\textbf{Secondary}&\textbf{From}\\
 	\midrule
 
 	\unit{Law / Torah / Pentateuch} \\
@@ -240,9 +170,8 @@ the needs of the class.
 		& Gen 12--36             & Gen 12; 22         & \cite[ch. 1]{ed19}  & 16 Sep. \\
 		& Exod 1--18             & Exod 3; 16         & \cite[ch. 2a]{ed19} & 23 Sep. \\
 		& Exod 19--34            & Exod 20--21; 34    & \cite[ch. 2b]{ed19} & 30 Sep. \\
-	\noclass{Nat'l Day for T\&R (self-study of Sinai covenant)}             & 30 Sep. \\
 	    & Lev 1--10; 25--26      & Lev 10; 26         & \cite[ch. 3]{ed19}  &  7 Oct. \\
-	\noclass{Thanksgiving (but meet Mon of Reading Week)}                   & 14 Oct. \\
+	\noclass{Thanksgiving (but resume Mon of Reading Week)}                 & 14 Oct. \\
 %	\noclass{Reading Week from Tuesday to Friday}                           & 22--25 Oct. \\
 %	\reminder{A short paper is \textbf{due} before the \textbf{sixth week} of class}{17 Oct.} \\% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
 		& Deut 1--16; 34         & Deut 6; 16         & \cite[ch. 5]{ed19}  & 21 Oct. \\ [1ex]
@@ -278,25 +207,43 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item \textbf{Notes and quotes} will be solicited from students at
-	the start of each class. These are to be drawn from the primary
-	reading \cite{njps}. What do you note about the material on this
-	occasion? What words, phrases, or verses stand out to you? Pay
-	attention to things you notice from a survey of large sections of
-	the Bible. Stay alert, too, to details that strike you from this
-	English translation of the Masoretic text. Make notes as you read.
-	Come prepared to share highlights with the class.
+	\item \textbf{Notes and quotes} will be solicited from students in
+	each week of class. These are to be drawn from the primary reading
+	\cite{njps}. What do you note about the material on this occasion?
+	What words, phrases, or verses stand out to you? Pay attention to
+	things you notice from a survey of large sections of the Bible. Stay
+	alert, too, to details that strike you from this translation. Mark
+	up your Bible. Make notes as you read.
+
+	\begin{enumerate}
+
+		\item As the course is asynchronous, such notes and quotes are
+		to be posted weekly to the class forums. In each week, these
+		open on the Monday listed by date in the course outline
+		(\autoref{schedule}). You are invited (but not strictly
+		required) to respond to and interact with classmates on the
+		forums through the week. Posts should be submitted by Thursday
+		at the latest so that any interaction can happen within the work
+		week. Posts should be around 250 words long; 200 words is
+		adequate, and in no case should they exceed 300 words.
+
+		\item Topical prompts may be provided by the professor to give
+		suggestions for the forum discussions. You are welcome to use
+		these to focus your comments. You are also absolutely free to
+		ignore the prompts and to introduce your own ideas.
+
+	\end{enumerate}
 
 	\item Two \textbf{reflection papers} give students an opportunity to
 	consider their relationship to the Scriptures of Israel and to
 	reflect on its development over the course. Each of these papers is
-	to be about \UG{1,000}{1,500} words long, including any footnotes. The
-	first paper is due before the third class; the second paper is due
-	before the final class.
+	to be about 800 words long, including any footnotes. The first paper
+	is due before the third week of class; the second paper is due by
+	the final day of class.
 
 	\begin{enumerate}
 
-		\item Before the third class, answer the following question:
+		\item Before the third week, answer the following question:
 		\emph{What does my tradition tell me about the Scriptures of
 		Israel?} To start, identify a tradition that broadly informs
 		your thinking about the Tanakh/OT/HB. Our traditions are often
@@ -330,112 +277,31 @@ The grade structure for \ccode has the following elements.
 
 	\end{enumerate}
 
-%	\item \textbf{Writing prompts} will be given throughout the
-%	semester. They are low-risk writing exercises designed to encourage
-%	careful reading of the assigned material, and to help explore its
-%	significance. Individual posts are not marked, though points may be
-%	deducted from your final grade if the exercise is not taken
-%	seriously. Prompt responses submitted online should be around 250
-%	words long, and should not exceed 300 words. Try to post the in the
-%	morning of class days, after you do the reading but before you
-%	listen to the lecture. You are invited (but not strictly required)
-%	to respond to and interact with classmates on the forums through the
-%	rest of the day.
-
-	\item Two \textbf{exegetical papers} facilitate direct work with the
-	biblical text as students practice the art of biblical
+	\item Two brief \textbf{exegetical papers} facilitate direct work
+	with the biblical text as students practice the art of biblical
 	interpretation. Each of these papers should focus on one narrow
-	passage and be about \UG{2,000}{3,000} words long, including any
-	footnotes. The professor encourages, but does not require, the
-	selection of shorter passages from within the focal chapters listed
-	in the course outline (\autoref{schedule}). The first paper is due
-	before the sixth class; the second paper is due before the eleventh
-	class.
-
-	% Deadlines have sometimes been wks 6 and 11 or else wks 5 and 10
-	% depending on scheduling issues. Make sure that what is stated here
-	% matches the schedule above.
+	passage and be about 1,500 words long, including any footnotes. The
+	professor encourages, but does not require, the selection of shorter
+	passages from within the focal chapters listed in the course outline
+	(\autoref{schedule}). The first paper is due before the sixth week;
+	the second paper is due before the eleventh week.
 
 	\begin{enumerate}
 
-		\item Before the sixth class, compose and submit an exegetical
+		\item Before the sixth week, compose and submit an exegetical
 		analysis of any suitably short passage from the \textbf{Law}
 		(Torah).
 
-		\item Before the eleventh class, compose and submit an
+		\item Before the eleventh week, compose and submit an
 		exegetical analysis of any suitably short passage from the
 		\textbf{Prophets} (Former or Latter).
 
 		\item Each paper must advance a \textbf{thesis} related to the
-		selected text. Each paper should interact with at least \UG{four
-		(4)}{six (6)} sources or commentators, not counting lectures
-		(which need not be cited). See me and \cite[chs. 3, 5, 8,
-		11]{rlgs} for guidance.
+		selected text. Each paper should interact with at least three
+		(3) sources or commentators, not counting lectures (which need
+		not be cited).
 
 	\end{enumerate}
-
-%\Int{
-%	\item One week, instead of answering a writing prompt, each student
-%	will make an \textbf{online presentation} on one of the twelve
-%	supplementary articles. Be creative! It may take the form of a
-%	podcast or online video, and should be sharable by URL (try
-%	SoundCloud, YouTube, or Vimeo). The presentation should last 8–10
-%	minutes (12 min at most). It must begin with a brief (3–5~min)
-%	summary of the article. The balance of the time should be spent
-%	helping other readers elaborate, reflect on, test, challenge, or
-%	extend the main ideas presented there. Post your link to the forums
-%	by the morning so that you can help shape the forum discussions on
-%	the same article.
-%}{
-%	\item Each student will lead a \textbf{seminar discussion} of one
-%	chapter from the HB/OT, freely chosen from a week's primary reading.
-%	The discussion should last about 25~minutes. It needs to begin with
-%	a brief (5~min) \textbf{outline} of the chapter. Outlines must be
-%	original, not borrowed from commentators. They should be circulated
-%	as handouts and explained orally. The balance of the time should be
-%	spent helping the class discover, elaborate, reflect on, test, or
-%	otherwise explore the meaning of the passage. Critical to success
-%	here is the ability to ask good questions of the Bible.
-%}
-
-%	\item \textbf{Seminar discussions}: Graduate students will lead
-%	\textbf{two} seminar discussions over the course of the semester;
-%	undergraduate (BTh) students will lead \textbf{one}. Handouts may be
-%	developed and circulated, but they are not required as part of the mark.
-%
-%
-%	\begin{enumerate}
-%
-%		\item Each student in the course must lead a discussion of one
-%		chapter from the primary reading, to occur in the same week in which
-%		it is assigned. Any chapter may be selected. Discussion should last
-%		twenty minutes. It should begin with a brief overview (five minutes
-%		maximum) of the chapter and key issues raised by it. The balance of
-%		the time should be spent helping the class discover, elaborate,
-%		reflect on, test, or otherwise explore the meaning of the passage.
-%		Vital to success here is the ability to ask good questions of the
-%		Bible.
-%
-%		\item Each graduate student must lead a second discussion on a
-%		supplementary reading. If the reading selection deviates from what
-%		is set in the syllabus, consult with the professor to make sure the
-%		alternate reading is circulated at least one week in advance. These
-%		seminars, too, should occur in the same week in which the material
-%		is assigned and should last twenty minutes. The allocation of time
-%		is different, however. Approximately fifteen minutes should be given
-%		to summary and analysis, with just five minutes at the end for
-%		questions and class discussion. The goal here is for advanced degree
-%		students to report on the results of critical inquiries into various
-%		noteworthy examples of biblical interpretation.
-%
-%		\item Students are encouraged to align their essay writing with
-%		their seminar topics. For example, it is perfectly acceptable to
-%		lead a discussion on the biblical chapter in which the short passage
-%		for your exegetical essay appears. It is also acceptable to let
-%		class discussion spur revisions to your paper, of course with the
-%		understanding that you credit others appropriately for their input.
-%
-%	\end{enumerate}
 
 \end{enumerate}
 
@@ -447,23 +313,24 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Notes \& Quotes     & 10\% \\
+    Notes \& Quotes     & 20\% \\
     Reflection Paper 1  & 15\% \\
     Reflection Paper 2  & 15\% \\
-    Exegetical Essay 1  & 30\% \\
-    Exegetical Essay 2  & 30\% \\
-%    \Int{Online Presentation}{Seminar Discussion} & 20\% \\
+    Exegetical Essay 1  & 25\% \\
+    Exegetical Essay 2  & 25\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
   \label{grade-dist}
 \end{table}
 
-%AST's \href{https://www.astheology.ns.ca/students/resources.html}{Academic
-%Calendar} provides guidelines and detailed criteria for academic
-%assessment. Marks are assigned by letter grade using these benchmarks.
+Per AST's \href{https://www.astheology.ns.ca/students/resources.html}{Academic Calendar},
+you are expected to complete all assigned readings and written
+assignments, participate in all group discussions and practice sessions,
+and engage in cooperative peer and/or faculty evaluation. All DTS
+courses are graded Pass/Fail.
 
-\input{\policy/grades}
+%\input{\policy/grades}
 \input{\policy/other}
 
 \section{Further Bibliography}
