finishing touches for F24

--- a/BF/BF1001-Driver2024.tex
+++ b/BF/BF1001-Driver2024.tex
@@ -290,13 +290,13 @@ The grade structure for \ccode has the following elements.
 	\item Two \textbf{reflection papers} give students an opportunity to
 	consider their relationship to the Scriptures of Israel and to
 	reflect on its development over the course. Each of these papers is
-	to be about \UG{1,000}{1,500} words long, including any footnotes. The
-	first paper is due before the third class; the second paper is due
-	before the final class.
+	to be about \UG{1,000}{1,500} words long, including any footnotes.
+	The first paper is due before the third week of class; the second
+	paper is due by the final day of class.
 
 	\begin{enumerate}
 
-		\item Before the third class, answer the following question:
+		\item Before the third week, answer the following question:
 		\emph{What does my tradition tell me about the Scriptures of
 		Israel?} To start, identify a tradition that broadly informs
 		your thinking about the Tanakh/OT/HB. Our traditions are often
@@ -349,8 +349,8 @@ The grade structure for \ccode has the following elements.
 	footnotes. The professor encourages, but does not require, the
 	selection of shorter passages from within the focal chapters listed
 	in the course outline (\autoref{schedule}). The first paper is due
-	before the sixth class; the second paper is due before the eleventh
-	class.
+	before the sixth week; the second paper is due before the eleventh
+	week.
 
 	% Deadlines have sometimes been wks 6 and 11 or else wks 5 and 10
 	% depending on scheduling issues. Make sure that what is stated here
@@ -358,19 +358,22 @@ The grade structure for \ccode has the following elements.
 
 	\begin{enumerate}
 
-		\item Before the sixth class, compose and submit an exegetical
+		\item Before the sixth week, compose and submit an exegetical
 		analysis of any suitably short passage from the \textbf{Law}
 		(Torah).
 
-		\item Before the eleventh class, compose and submit an
+		\item Before the eleventh week, compose and submit an
 		exegetical analysis of any suitably short passage from the
 		\textbf{Prophets} (Former or Latter).
 
 		\item Each paper must advance a \textbf{thesis} related to the
-		selected text. Each paper should interact with at least \UG{four
-		(4)}{six (6)} sources or commentators, not counting lectures
-		(which need not be cited). See me and \cite[chs. 3, 5, 8,
-		11]{rlgs} for guidance.
+		selected text. This thesis should be clearly identifiable as a
+		single sentence in an obvious location. Each paper should
+		interact with at least \UG{four (4)}{six (6)} sources or
+		commentators, not counting lectures (which need not be cited).
+		
+		\item See my \href{https://danieldriver.com/assets/pdf/handouts/Guidelines_for_Papers.pdf}{“Guidelines for Papers and Other Written Assignments” (PDF)}.
+		See also \cite[chs. 3, 5, 8, 11]{rlgs} and \cite{sbl2}.
 
 	\end{enumerate}
 
