--- a/BF/DTS2000-Driver2024.tex
+++ b/BF/DTS2000-Driver2024.tex
@@ -218,19 +218,21 @@ The grade structure for \ccode has the following elements.
 	\begin{enumerate}
 
 		\item As the course is asynchronous, such notes and quotes are
-		to be posted weekly to the class forums. In each week, these
-		open on the Monday listed by date in the course outline
+		to be posted weekly to the class forums. Each week opens on the
+		Mondays listed by date in the course outline
 		(\autoref{schedule}). You are invited (but not strictly
 		required) to respond to and interact with classmates on the
 		forums through the week. Posts should be submitted by Thursday
 		at the latest so that any interaction can happen within the work
-		week. Posts should be around 250 words long; 200 words is
-		adequate, and in no case should they exceed 300 words.
+		week. Aim to make posts around 250 words long; 200 words is
+		adequate, if you have little to say, but in no case should they
+		exceed 300 words.
 
-		\item Topical prompts may be provided by the professor to give
-		suggestions for the forum discussions. You are welcome to use
-		these to focus your comments. You are also absolutely free to
-		ignore the prompts and to introduce your own ideas.
+		\item Topical prompts may be suggested by the professor based on
+		the lectures or other course material. You are welcome to use
+		these prompts to focus your notes and quotes in the forum
+		discussions. You are also free to ignore the prompts and to
+		pursue your own questions and observations.
 
 	\end{enumerate}
 
@@ -277,8 +279,8 @@ The grade structure for \ccode has the following elements.
 
 	\end{enumerate}
 
-	\item Two brief \textbf{exegetical papers} facilitate direct work
-	with the biblical text as students practice the art of biblical
+	\item Two \textbf{exegetical papers} facilitate direct work with the
+	biblical text as students practice the art of biblical
 	interpretation. Each of these papers should focus on one narrow
 	passage and be about 1,500 words long, including any footnotes. The
 	professor encourages, but does not require, the selection of shorter
@@ -297,9 +299,12 @@ The grade structure for \ccode has the following elements.
 		\textbf{Prophets} (Former or Latter).
 
 		\item Each paper must advance a \textbf{thesis} related to the
-		selected text. Each paper should interact with at least three
-		(3) sources or commentators, not counting lectures (which need
-		not be cited).
+		selected text. This thesis should be clearly identifiable as a
+		single sentence in an obvious location. Each paper should
+		interact with at least three (3) sources or commentators, not
+		counting lectures (which need not be cited).
+		
+		\item See my \href{https://danieldriver.com/assets/pdf/handouts/Guidelines_for_Papers.pdf}{“Guidelines for Papers and Other Written Assignments” (PDF)}.
 
 	\end{enumerate}
 
