Align language with DTS 2000

--- a/BF/BF1001-Driver2024.tex
+++ b/BF/BF1001-Driver2024.tex
@@ -284,8 +284,8 @@ The grade structure for \ccode has the following elements.
 	occasion? What words, phrases, or verses stand out to you? Pay
 	attention to things you notice from a survey of large sections of
 	the Bible. Stay alert, too, to details that strike you from this
-	English translation of the Masoretic text. Make notes as you read.
-	Come prepared to share highlights with the class.
+	translation. Mark up your Bible. Make notes as you read. Come
+	prepared to share highlights with the class.
 
 	\item Two \textbf{reflection papers} give students an opportunity to
 	consider their relationship to the Scriptures of Israel and to
